initial draft for first assignment

--- a/index.html
+++ b/index.html
@@ -1,1 +1,86 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Your Name | Portfolio</title>
+  <link rel="stylesheet" href="index.css" />
+</head>
+<body>
+    <nav>
+        <div class="nav-container">
+            <div class="nav-left"></div>
+            
+            <div class="nav-middle">
+                <a href="index.html">Home</a>
+                <a href="project.html">Projects</a>
+                <a href="#about">About</a>
+                <a href="#contact">Contact</a>
+            </div>
+            <div class="nav-right">
+                <div>
+                    <a href="https://www.linkedin.com/in/zachshewan/" target="_blank">
+                        <i class="fab fa-linkedin"></i> <!-- need to include logo library for this logo-->
+                    </a>
+                </div>
+                <div>
+                    <a href="https://github.com/shezac13" target="_blank">
+                    <i class="fab fa-github"></i> <!-- need to include logo library for this logo-->
+                    </a>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+
+    <header id="home" class="main-header">
+        <h1>Zach Shewan</h1>
+        <p>University Student | Software Engineering</p>
+    </header>
+
+
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Add description about myself.</p>
+    </section>
+
+
+    <section id="projects">
+    <h2>My Projects</h2>
+    <div class="projects">
+        <a href="project.html">
+        <img src="assets/placeholder_img.png" alt="Project 1 Screenshot" />
+        <p>Project 1 Title</p>
+        </a>
+
+        <a href="project.html">
+        <img src="assets/placeholder_img.png" alt="Project 2 Screenshot" />
+        <p>Project 2 Title</p>
+        </a>
+
+        <a href="project.html">
+        <img src="assets/placeholder_img.png" alt="Project 2 Screenshot" />
+        <p>Project 3 Title</p>
+        </a>
+
+        <a href="project.html">
+        <img src="assets/placeholder_img.png" alt="Project 2 Screenshot" />
+        <p>Project 4 Title</p>
+        </a>
+    </div>
+    </section>
+
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: zshew013@uottawa.ca</p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/zachshewan/" target="_blank">LinkedIn</a></p> <!-- Possibly move to main taskbar or just keep here and have on main taskbar. Could also have the about menu btn make a popup with everything-->
+    </section>
+
+
+    <footer>
+        &copy; 2025 Zach Shewan. All rights reserved.
+    </footer>
+
+</body>
+</html>
