update pages with bootstrap content

--- a/project.html
+++ b/project.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zach Shewan | Projects</title>
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
@@ -10,34 +10,35 @@
 
 </head>
 <body>
+    <!-- Navigation bar -->
     <nav>
         <div class="nav-container">
             <div class="nav-left"></div>
             
             <div class="nav-middle">
                 <a href="index.html">Home</a>
-                <a href="project.html">Projects</a>
+                <a href="project.html">Projects</a> <!-- maybe change this into a drop down to be able to choose which project-->
                 <a href="#about">About</a>
                 <a href="#contact">Contact</a>
             </div>
             <div class="nav-right">
                 <div>
                     <a href="https://www.linkedin.com/in/zachshewan/" target="_blank">
-                        <i class="fab fa-linkedin"></i>
+                        <i class="fab fa-linkedin"></i> <!-- need to include logo library for this logo-->
                     </a>
                 </div>
                 <div>
                     <a href="https://github.com/shezac13" target="_blank">
-                    <i class="fab fa-github"></i>
+                    <i class="fab fa-github"></i> <!-- need to include logo library for this logo-->
                     </a>
                 </div>
             </div>
         </div>
     </nav>
 
-    <header>
-        <h1>This page has not yet been implemented</h1>
-    </header>
+
+    <p>This page has not yet been implemented</p>
+
 
 </body>
 </html>
