--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Your Name | Portfolio</title>
-  <link rel="stylesheet" href="index.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Zach Shewan | Home</title>
+    <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 </head>
 <body>
+    <!-- Navigation bar -->
     <nav>
         <div class="nav-container">
             <div class="nav-left"></div>
             
             <div class="nav-middle">
                 <a href="index.html">Home</a>
-                <a href="project.html">Projects</a>
+                <a href="project.html">Projects</a> <!-- maybe change this into a drop down to be able to choose which project-->
                 <a href="#about">About</a>
                 <a href="#contact">Contact</a>
             </div>
@@ -35,12 +36,11 @@
         </div>
     </nav>
 
-
-    <header id="home" class="main-header">
+    <!-- Main portion to introduce myself -->
+    <div class="mt-2 text-white rounded main-header">
         <h1>Zach Shewan</h1>
-        <p>University Student | Software Engineering</p>
-    </header>
-
+        <p>Software Engineering Student | University of Ottawa</p>
+    </div>
 
     <section id="about">
         <h2>About Me</h2>
@@ -49,28 +49,49 @@
 
 
     <section id="projects">
-    <h2>My Projects</h2>
-    <div class="projects">
-        <a href="project.html">
-        <img src="assets/placeholder_img.png" alt="Project 1 Screenshot" />
-        <p>Project 1 Title</p>
-        </a>
-
-        <a href="project.html">
-        <img src="assets/placeholder_img.png" alt="Project 2 Screenshot" />
-        <p>Project 2 Title</p>
-        </a>
-
-        <a href="project.html">
-        <img src="assets/placeholder_img.png" alt="Project 2 Screenshot" />
-        <p>Project 3 Title</p>
-        </a>
-
-        <a href="project.html">
-        <img src="assets/placeholder_img.png" alt="Project 2 Screenshot" />
-        <p>Project 4 Title</p>
-        </a>
-    </div>
+        <h2>My Projects</h2>
+        <div class="projects">
+            <div class="card hover-zoom" style="width:300px">
+                <a href="project.html">
+                    <img class="card-img-top" src="assets/placeholder_img.png" alt="Card image">
+                </a>
+                <div class="card-body">
+                    <h4 class="card-title">Project 1 Title</h4>
+                    <p class="card-text"></p>
+                    <a href="project.html" class="btn">See Project</a>
+                </div>
+            </div>
+            <div class="card hover-zoom" style="width:300px">
+                <a href="project.html">
+                    <img class="card-img-top" src="assets/placeholder_img.png" alt="Card image">
+                </a>
+                <div class="card-body">
+                    <h4 class="card-title">Project 2 Title</h4>
+                    <p class="card-text"></p>
+                    <a href="project.html" class="btn">See Project</a>
+                </div>
+            </div>
+            <div class="card hover-zoom" style="width:300px">
+                <a href="project.html">
+                    <img class="card-img-top" src="assets/placeholder_img.png" alt="Card image">
+                </a>
+                <div class="card-body">
+                    <h4 class="card-title">Project 3 Title</h4>
+                    <p class="card-text"></p>
+                    <a href="project.html" class="btn">See Project</a>
+                </div>
+            </div>
+            <div class="card hover-zoom" style="width:300px">
+                <a href="project.html">
+                    <img class="card-img-top" src="assets/placeholder_img.png" alt="Card image">
+                </a>
+                <div class="card-body">
+                    <h4 class="card-title">Project 4 Title</h4>
+                    <p class="card-text"></p>
+                    <a href="project.html" class="btn">See Project</a>
+                </div>
+            </div>
+        </div>
     </section>
 
 
