--- a/home/index.html
+++ b/home/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zach Shewan | Home</title>
-    <link rel="stylesheet" href="index.css" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="icon" type="image/png" href="assets/placeholder_img.png">
+    <link rel="stylesheet" href="/home/home.css" />
+    <link rel="stylesheet" href="/home/style.css" />
+    <link rel="icon" type="image/png" href="/home/assets/placeholder_img.png">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 </head>
@@ -17,8 +17,8 @@
             <div class="nav-left"></div>
             
             <div class="nav-middle">
-                <a href="index.html">Home</a>
-                <a href="project.html">Projects</a> <!-- maybe change this into a drop down to be able to choose which project-->
+                <a href="/home/">Home</a>
+                <a href="/home/project/">Projects</a> <!-- maybe change this into a drop down to be able to choose which project-->
                 <a href="#about">About</a>
                 <a href="#contact">Contact</a>
             </div>
@@ -54,7 +54,7 @@
         <div class="projects">
             <div class="card hover-zoom" style="width:300px">
                 <a href="project.html">
-                    <img class="card-img-top" src="assets/placeholder_img.png" alt="Card image">
+                    <img class="card-img-top" src="/home/assets/placeholder_img.png" alt="Card image">
                 </a>
                 <div class="card-body">
                     <h4 class="card-title">Project 1 Title</h4>
@@ -64,7 +64,7 @@
             </div>
             <div class="card hover-zoom" style="width:300px">
                 <a href="project.html">
-                    <img class="card-img-top" src="assets/placeholder_img.png" alt="Card image">
+                    <img class="card-img-top" src="/home/assets/placeholder_img.png" alt="Card image">
                 </a>
                 <div class="card-body">
                     <h4 class="card-title">Project 2 Title</h4>
@@ -74,7 +74,7 @@
             </div>
             <div class="card hover-zoom" style="width:300px">
                 <a href="project.html">
-                    <img class="card-img-top" src="assets/placeholder_img.png" alt="Card image">
+                    <img class="card-img-top" src="/home/assets/placeholder_img.png" alt="Card image">
                 </a>
                 <div class="card-body">
                     <h4 class="card-title">Project 3 Title</h4>
@@ -84,7 +84,7 @@
             </div>
             <div class="card hover-zoom" style="width:300px">
                 <a href="project.html">
-                    <img class="card-img-top" src="assets/placeholder_img.png" alt="Card image">
+                    <img class="card-img-top" src="/home/assets/placeholder_img.png" alt="Card image">
                 </a>
                 <div class="card-body">
                     <h4 class="card-title">Project 4 Title</h4>
