--- a/home/index.html
+++ b/home/index.html
@@ -9,28 +9,26 @@
     <link rel="icon" type="image/png" href="/home/assets/placeholder_img.png">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <!-- Navigation bar -->
     <nav>
-        <div class="nav-container">
-            <div class="nav-left"></div>
-            
+        <div class="nav-container">          
             <div class="nav-middle">
                 <a href="/home/">Home</a>
-                <a href="/home/project/">Projects</a> <!-- maybe change this into a drop down to be able to choose which project-->
-                <a href="#about">About</a>
-                <a href="#contact">Contact</a>
+                <a href="/home/projects/">Projects</a> <!-- maybe change this into a drop down to be able to choose which project-->
+                <a href="/home/#about">About</a>
             </div>
             <div class="nav-right">
-                <div>
+                <div class="nav-right-linkedin">
                     <a href="https://www.linkedin.com/in/zachshewan/" target="_blank">
-                        <i class="fab fa-linkedin"></i> <!-- need to include logo library for this logo-->
+                        <i class="fab fa-linkedin"></i> 
                     </a>
                 </div>
-                <div>
+                <div class="nav-right-github">
                     <a href="https://github.com/shezac13" target="_blank">
-                    <i class="fab fa-github"></i> <!-- need to include logo library for this logo-->
+                    <i class="fab fa-github"></i> 
                     </a>
                 </div>
             </div>
@@ -45,7 +43,20 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>Add description about myself.</p>
+        <div class="about-container">
+            <p>My name is Zachary Shewan, I am a Software Engineering Student at the University of Ottawa. 
+                I enjoy many aspects in the software engineering field, including backend development, cloud 
+                infrastructure and AI. During my studies I have completed 2 CO-OP study terms, both at Solace. My first 
+                term was in Summer 2024 where I was on the AI-integrations team, for my second term I was on 
+                the Cloud Infrastructure team in Winter 2025. To further develop my skills as a front-end 
+                developer and Software Engineer, I am currently following a UI/UX course (SEG3525) at the 
+                University of Ottawa.<br>
+                In my free time, I enjoy playing sports. I am currently a member of the Men’s Volleyball team 
+                at the University of Ottawa. In addition to volleyball, I also enjoy playing baseball and golf.
+            </p>
+            <img src="/home/assets/me_suit.jpg" alt="" class="profile-image">
+        </div>
+
     </section>
 
 
@@ -53,53 +64,60 @@
         <h2>My Projects</h2>
         <div class="projects">
             <div class="card hover-zoom" style="width:300px">
-                <a href="project.html">
-                    <img class="card-img-top" src="/home/assets/placeholder_img.png" alt="Card image">
+                <a href="/home/projects/Dentist/">
+                    <img class="card-img-top" src="/home/assets/dentist.svg" alt="Card image">
                 </a>
                 <div class="card-body">
-                    <h4 class="card-title">Project 1 Title</h4>
-                    <p class="card-text"></p>
-                    <a href="project.html" class="btn">See Project</a>
+                    <h4 class="card-title">Dentist</h4>
+                    <a href="/home/projects/Dentist/" class="btn">See Project</a>
                 </div>
             </div>
             <div class="card hover-zoom" style="width:300px">
-                <a href="project.html">
-                    <img class="card-img-top" src="/home/assets/placeholder_img.png" alt="Card image">
+                <a href="/home/projects/Web-Game/">
+                    <img class="card-img-top" src="/home/assets/games.jpg" alt="Card image">
                 </a>
                 <div class="card-body">
-                    <h4 class="card-title">Project 2 Title</h4>
-                    <p class="card-text"></p>
-                    <a href="project.html" class="btn">See Project</a>
+                    <h4 class="card-title">Web Game</h4>
+                    <a href="/home/projects/Web-Game/" class="btn">See Project</a>
                 </div>
             </div>
             <div class="card hover-zoom" style="width:300px">
-                <a href="project.html">
-                    <img class="card-img-top" src="/home/assets/placeholder_img.png" alt="Card image">
+                <a href="/home/projects/E-Commerce/">
+                    <img class="card-img-top" src="/home/assets/Ecommerce-Business.jpg" alt="Card image">
                 </a>
                 <div class="card-body">
-                    <h4 class="card-title">Project 3 Title</h4>
-                    <p class="card-text"></p>
-                    <a href="project.html" class="btn">See Project</a>
+                    <h4 class="card-title">E-Commerce</h4>
+                    <a href="/home/projects/E-Commerce/" class="btn">See Project</a>
                 </div>
             </div>
             <div class="card hover-zoom" style="width:300px">
-                <a href="project.html">
+                <a href="/home/projects/Sports-Analytics/">
+                    <img class="card-img-top" src="/home/assets/sports_analytics.jpeg" alt="Card image">
+                </a>
+                <div class="card-body">
+                    <h4 class="card-title">Sports Analytics</h4>
+                    <a href="/home/projects/Sports-Analytics/" class="btn">See Project</a>
+                </div>
+            </div>
+            <div class="card hover-zoom" style="width:300px">
+                <a href="/home/projects/">
                     <img class="card-img-top" src="/home/assets/placeholder_img.png" alt="Card image">
                 </a>
                 <div class="card-body">
-                    <h4 class="card-title">Project 4 Title</h4>
-                    <p class="card-text"></p>
-                    <a href="project.html" class="btn">See Project</a>
+                    <h4 class="card-title">Project 5 Title</h4>
+                    <a href="/home/projects/" class="btn">See Project</a>
+                </div>
+            </div>
+            <div class="card hover-zoom" style="width:300px">
+                <a href="/home/projects/">
+                    <img class="card-img-top" src="/home/assets/placeholder_img.png" alt="Card image">
+                </a>
+                <div class="card-body">
+                    <h4 class="card-title">Project 6 Title</h4>
+                    <a href="/home/projects/" class="btn">See Project</a>
                 </div>
             </div>
         </div>
-    </section>
-
-
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: zshew013@uottawa.ca</p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/zachshewan/" target="_blank">LinkedIn</a></p> <!-- Possibly move to main taskbar or just keep here and have on main taskbar. Could also have the about menu btn make a popup with everything-->
     </section>
 
 
