--- a/home/projects/index.html
+++ b/home/projects/index.html
@@ -7,7 +7,7 @@
     <title>Zach Shewan | Projects</title>
     <link rel="stylesheet" href="/home/style.css" />
     <link rel="stylesheet" href="/home/projects/projects.css" />
-    <link rel="icon" type="image/png" href="/home/assets/me_icon.jpg">
+    <link rel="icon" type="image/png" href="/home/assets/me_icon.png">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
