--- a/home/index.html
+++ b/home/index.html
@@ -64,12 +64,12 @@
         <h2>My Projects</h2>
         <div class="projects">
             <div class="card hover-zoom" style="width:300px">
-                <a href="/home/projects/Dentist/">
-                    <img class="card-img-top" src="/home/assets/dentist.svg" alt="Card image">
+                <a href="https://uottawa-project-sharing.github.io/seg3525-assignment2/">
+                    <img class="card-img-top" src="/home/assets/gym-icon-vector.jpg" alt="Card image">
                 </a>
                 <div class="card-body">
-                    <h4 class="card-title">Dentist</h4>
-                    <a href="/home/projects/Dentist/" class="btn">See Project</a>
+                    <h4 class="card-title">Gym Service</h4>
+                    <a href="https://uottawa-project-sharing.github.io/seg3525-assignment2/" class="btn">See Project</a>
                 </div>
             </div>
             <div class="card hover-zoom" style="width:300px">
