--- a/home/index.html
+++ b/home/index.html
@@ -73,12 +73,12 @@
                 </div>
             </div>
             <div class="card hover-zoom" style="width:300px">
-                <a href="/home/projects/Web-Game/">
+                <a href="https://uottawa-project-sharing.github.io/seg3525-assignment3/">
                     <img class="card-img-top" src="/home/assets/games.jpg" alt="Card image">
                 </a>
                 <div class="card-body">
                     <h4 class="card-title">Web Game</h4>
-                    <a href="/home/projects/Web-Game/" class="btn">See Project</a>
+                    <a href="https://uottawa-project-sharing.github.io/seg3525-assignment3/" class="btn">See Project</a>
                 </div>
             </div>
             <div class="card hover-zoom" style="width:300px">
