update E-Commerce href

--- a/home/index.html
+++ b/home/index.html
@@ -82,12 +82,12 @@
                 </div>
             </div>
             <div class="card hover-zoom" style="width:300px">
-                <a href="/home/projects/E-Commerce/">
+                <a href="https://uottawa-project-sharing.github.io/seg3525-assignment4/#/">
                     <img class="card-img-top" src="/home/assets/Ecommerce-Business.jpg" alt="Card image">
                 </a>
                 <div class="card-body">
                     <h4 class="card-title">E-Commerce</h4>
-                    <a href="/home/projects/E-Commerce/" class="btn">See Project</a>
+                    <a href="https://uottawa-project-sharing.github.io/seg3525-assignment4/#/" class="btn">See Project</a>
                 </div>
             </div>
             <div class="card hover-zoom" style="width:300px">
