change reference for sport analytics website

--- a/home/index.html
+++ b/home/index.html
@@ -91,12 +91,12 @@
                 </div>
             </div>
             <div class="card hover-zoom" style="width:300px">
-                <a href="/home/projects/Sports-Analytics/">
+                <a href="https://shezac13.github.io/seg3525-assignment5/mlb/">
                     <img class="card-img-top" src="/home/assets/sports_analytics.jpeg" alt="Card image">
                 </a>
                 <div class="card-body">
                     <h4 class="card-title">Sports Analytics</h4>
-                    <a href="/home/projects/Sports-Analytics/" class="btn">See Project</a>
+                    <a href="https://shezac13.github.io/seg3525-assignment5/mlb/" class="btn">See Project</a>
                 </div>
             </div>
         </div>
