update images on project cards for assignment 5 final submission

--- a/home/index.html
+++ b/home/index.html
@@ -65,7 +65,7 @@
         <div class="projects">
             <div class="card hover-zoom" style="width:300px">
                 <a href="https://uottawa-project-sharing.github.io/seg3525-assignment2/">
-                    <img class="card-img-top" src="/home/assets/gym-icon-vector.jpg" alt="Card image">
+                    <img class="card-img-top" src="/home/assets/D2.png" alt="Card image">
                 </a>
                 <div class="card-body">
                     <h4 class="card-title">Gym Service</h4>
@@ -74,7 +74,7 @@
             </div>
             <div class="card hover-zoom" style="width:300px">
                 <a href="https://uottawa-project-sharing.github.io/seg3525-assignment3/">
-                    <img class="card-img-top" src="/home/assets/games.jpg" alt="Card image">
+                    <img class="card-img-top" src="/home/assets/D3-2.png" alt="Card image">
                 </a>
                 <div class="card-body">
                     <h4 class="card-title">Web Game</h4>
@@ -83,7 +83,7 @@
             </div>
             <div class="card hover-zoom" style="width:300px">
                 <a href="https://uottawa-project-sharing.github.io/seg3525-assignment4/#/">
-                    <img class="card-img-top" src="/home/assets/Ecommerce-Business.jpg" alt="Card image">
+                    <img class="card-img-top" src="/home/assets/D4.png" alt="Card image">
                 </a>
                 <div class="card-body">
                     <h4 class="card-title">E-Commerce</h4>
@@ -92,7 +92,7 @@
             </div>
             <div class="card hover-zoom" style="width:300px">
                 <a href="https://shezac13.github.io/seg3525-assignment5/mlb/">
-                    <img class="card-img-top" src="/home/assets/sports_analytics.jpeg" alt="Card image">
+                    <img class="card-img-top" src="/home/assets/D5.png" alt="Card image">
                 </a>
                 <div class="card-body">
                     <h4 class="card-title">Sports Analytics</h4>
